--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=denisalibec
 
+spring.jpa.database-platform=com.site.denisalibec.config.SQLiteDialect
 spring.datasource.url=jdbc:sqlite:alibecdenis.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
