--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,9 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.5.4</version> <!-- Spring Boot 2.5.x pentru Hibernate 5.x -->
 		</dependency>
+
 
 		<!-- Spring Security -->
 		<dependency>
@@ -84,6 +86,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.5.7.Final</version> <!-- Hibernate 5.5.x -->
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -102,4 +110,3 @@
 	</build>
 
 </project>
-
