--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=denisalibec
 
+
 spring.jpa.database-platform=com.site.denisalibec.config.SQLiteDialect
-spring.datasource.url=jdbc:sqlite:alibecdenis.db
+spring.datasource.url=jdbc:sqlite:D:/ProiectDenis/denisalibec/alibecdenis.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update  # Sau 'create' dacă vrei să creezi schema de fiecare dată
 spring.jpa.show-sql=true
