--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 spring.application.name=denisalibec
 
 
-spring.jpa.database-platform=com.site.denisalibec.config.SQLiteDialect
-spring.datasource.url=jdbc:sqlite:D:/ProiectDenis/denisalibec/alibecdenis.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.hibernate.ddl-auto=update  # Sau 'create' dacă vrei să creezi schema de fiecare dată
+spring.datasource.url=jdbc:h2:file:./src/main/resources/test;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=password
+#example for using postgresql
+#spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Enable SQL logging
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
