--- a/pom.xml
+++ b/pom.xml
@@ -33,16 +33,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>2.5.4</version> <!-- Spring Boot 2.5.x pentru Hibernate 5.x -->
+			<version>3.5.0</version> <!-- Folosește Spring Boot 3.x -->
 		</dependency>
 
 
-		<!-- Spring Security -->
+		<!-- Spring Security
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
+		-->
 		<!-- SQLite JDBC -->
 		<dependency>
 			<groupId>org.xerial</groupId>
@@ -50,31 +50,12 @@
 			<version>3.44.1.0</version>
 		</dependency>
 
-		<!-- OpenCSV pentru import CSV -->
-		<dependency>
-			<groupId>com.opencsv</groupId>
-			<artifactId>opencsv</artifactId>
-			<version>5.8</version>
-		</dependency>
 
-		<!-- OpenPDF pentru generare facturi PDF -->
-		<dependency>
-			<groupId>com.github.librepdf</groupId>
-			<artifactId>openpdf</artifactId>
-			<version>1.3.30</version>
-		</dependency>
 
 		<!-- Validare formulare -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-
-		<!-- Generator PDF -->
-		<dependency>
-			<groupId>org.apache.pdfbox</groupId>
-			<artifactId>pdfbox</artifactId>
-			<version>2.0.30</version>
 		</dependency>
 
 
@@ -89,7 +70,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.5.7.Final</version> <!-- Hibernate 5.5.x -->
+			<version>6.0.0.Final</version> <!-- Folosește Hibernate 6.x -->
 		</dependency>
 
 		<!-- Test -->
@@ -98,7 +79,31 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- de verificat dublate -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
