--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,13 @@ spring.datasource.password=password
 #spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Enable SQL logging
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
